src/sass/_posts.scss
/**
 * Single Post
 */

.single {

  .entry-header,
  .entry-content {
    max-width: $size__content-width;
    margin-right: auto;
    margin-left: auto;
  }

  .entry-header {
    text-align: center;

    .meta-category {
      a {
        color: $color__text-dark;
      }
    }
  }

  .entry-title {
    display: block;
    margin-bottom: .5em;
  }

  .entry-subhead {
    margin-bottom: 1em;
  }

  .entry-content {
    line-height: 1.7em;
    font-family: $font__serif;
    font-size: 1.1rem;

    p,
    li {
      line-height: 1.7em;
      font-size: 1.1rem;
    }

    blockquote p {
      font-size: 1.1rem;
    }
  }

  .single-post-thumbnail {
    margin-right: auto;
    margin-left: auto;

    img {
      width: 100%;
      height: auto;
    }

  }

  .entry-meta {
    margin-bottom: 1.5em;

    .meta-date a,
    .meta-date a:link,
    .meta-date a:visited {
      color: $color__text-dark;
      text-transform: uppercase;
    }
  }

  .meta-author a  {
    text-transform: uppercase;
  }

  .entry-thumbnail {

    img {
      max-width: 100%;
      width: initial;
    }
  }

  .wp-caption-text {
    margin-bottom: 1em;
  }

  .wp-post-image {
    margin-bottom: 0;
  }

  .content-footer-widget {
    border-top: 1px solid $color__gray-lighter;
    border-bottom: 1px solid $color__gray-lighter;
    text-align: center;
    margin: 1em 0 2em 0;
  }

  .single-subscribe-widget {
    display: inline-block;
    margin: 2em 1em 1em;
    form, fieldset {
      display: inline-block;
      text-align: left;
    }

    form {
      padding-left: 1em;
    }

    input[type="email"] {
      padding: 0.2em 0.6em 0.2em;
    }
  }
  .single-subscribe-widget-info {
    display: inline-block;
    vertical-align: top;
    text-align: left;
    width: 9em;
    h4 {
      margin-top: 0;
      line-height: 1.4;
      color: $color__accent;
      text-transform: uppercase;
      font-family: $font__sans-serif;
      font-size: 18px;
    }
  }

  .margin-right,
  .margin-left {
    width: 33.3333%;
    margin: 1em;
    overflow: hidden;
    font-size: 1rem;
  }
  .margin-right {
    float: right;
    margin-right: 0;
  }
  .margin-left {
    float: left;
    margin-left: 0;
  }

  .margin-right,
  .margin-left {
    @include visually-hidden;
  }

  @include breakpoint(md) {

    .margin-right,
    .margin-left {
      @include visually-displayed;
      width: 300px;
      margin: 2em;
    }

    .margin-right {
      margin-right: -150px;
    }
    .margin-left {
      margin-left: -150px;
    }

  }

}

.single-magazines {

  .hentry {
    max-width: none;

    .single-post-thumbnail {
      max-width: 100% !important;
    }
  }

  .entry-header {
    .issue-cover {
      background-image: url( '../images/starburst.svg' );
      background-repeat: no-repeat;
      background-position: left center;
    }
    .single-post-thumbnail {
      position: relative;

      #starburst {
        width: 100px;
        height: auto;
        position: absolute;
        top: 180px;
        left: -40px;
        transform: rotate(-10deg);
      }
    }
    .magazine-sidebar {
      h3 {
        color: $color__accent;
        text-transform: uppercase;
        font-size: 3rem;
        margin: 0;
        font-family: $font__sans-serif;
      }
      .textwidget {
        font-size: 1.3rem;
        line-height: 1.4;
        font-weight: 300;
        margin: 1em 0 1.5em;
        a, a:visited {
          color: $color__accent;
        }
      }
    }

    @include breakpoint( md ) {
      @include columns(2);
      width: 100%;
      margin-left: 0;
      max-width: none;
    }
  }

  .entry-content {
    max-width: none;
    width: 100%;
    padding: 0 1em;

    .issue-header {}
    .issue-content {}
    .issue-toc {
      &> p:first-child {
        margin-top: 0;
      }
      p {
        font-size: 0.9rem;
      }
    }
    .issue-gallery {}

    .issue-content {
      @include breakpoint( md ) {
        @include columns(2, 3em);
        .editors-note {
          max-width: 60%;
          flex: 2 1 60%;
        }
        .issue-toc {
          max-width: 40%;
          flex: 2 1 40%;
        }
      }

      p {
        font-family: $font__serif;
      }
    }

    .entry-title,
    .entry-meta {
      display: inline;
    }

    .entry-meta {
      color: $color__text-light;
      font-weight: normal;
      text-transform: uppercase;
      font-size: 1.2rem;
    }
    .entry-title {}
    .issue-note {}

  }

  .entry-content .entry-title,
  .issue-note,
  .issue-features,
  .relatedposts-headline {
    color: $color__text-dark;
    font-family: $font__work-sans;
    text-transform: uppercase;
    letter-spacing: 0.7px;
    line-height: 1em;
    padding-right: 4px;
    font-style: normal;
    font-weight: 800;
  }
}

.relatedposts-post-excerpt, .relatedposts-post-title {
  margin: 0 !important;
  font-family: $font__sans-serif;
}
.relatedposts-post-excerpt {
  font-weight: 300;
  .issue-date {
    text-transform: uppercase;
  }
}
.relatedposts-post-title {
  margin-top: 0.5em !important;
  a, a:visited {
    font-family: $font__sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 1.5rem;
  }
}
.relatedposts-headline {
  font-size: 1.8rem;
}

.post-layout-four-columns {
  .post-wrapper {
    .type-post,
    .type-blogs,
    .type-magazines {

    }
  }
}

.post-column {
  margin-bottom: 1em;
}

/**
 * Archives
 */
.archive,
.home,
.related-posts {
  .hentry {}
  h2.entry-title {
    margin-top: .25em;
    font-size: 1.45em;
    line-height: 1.2;
  }
  .post-thumbnail {
    position: relative;
    width: 100%;
    margin-top: 0;
    padding-bottom: 100%;
    height: 0;
    overflow: hidden;

    img {
      width: 100%;
      height: auto;
      position: absolute;
      top: 0;
      object-fit: cover;
    }
  }
  .meta-date {
    @include visually-hidden;
  }
}

.post-wrapper {
  .type-post,
  .type-blogs {
    .entry-meta {
      margin: .25em 0 .5em 0;
    }
  }
}

